--- a/src/App.css
+++ b/src/App.css
@@ -4,17 +4,14 @@
 
 .App-main {
   /* background: url("./img/air_pollution.jpg"); */
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  /* background-color:#2c3e50; */
+  /* color:white; */
 }
 
 .App-header {
   background-color: #222;
-  height: 100px;
-  padding: 20px;
+  height: 70px;
+  padding: 1px;
   color: white;
 }
 
@@ -23,7 +20,7 @@
 }
 
 .App-intro {
-  margin-top: 25px;
+  margin-top: 10px;
   font-size: large;
 }
 
@@ -41,10 +38,16 @@
 }
 
 .nav-tabs {
-  padding-top: 25px;
+  padding-top: 15px;
   padding-left: 575px;
 }
 
 .Nav-content {
   padding-top: 25px;
+}
+
+.Display-content {
+  padding-top: 25px;
+  background: #222;
+  color:white;
 }
